--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "laravel/framework": "^6.0|^7.0|^8.0",
-        "guzzlehttp/guzzle": "^6.4",
+        "guzzlehttp/guzzle": "^6.4|^7.0.1",
         "jaybizzle/crawler-detect": "^1.2"
     },
     "require-dev": {
